compiler/testData/asJava/lightClasses/compilationErrors/SameName.java
public final class A /* A*/ {
  private final int i;

  private final java.lang.String i$1;

  private final java.lang.String j$1;

  private final java.lang.String j;

  @org.jetbrains.annotations.NotNull()
  public final java.lang.String g(int, double);//  g(int, double)

  public  A();//  .ctor()

  public final int g(int, double);//  g(int, double)

  public final void f(int, double);//  f(int, double)

  public final void f(int, double);//  f(int, double)

}